# Learn-ML

./: .gitignore  pyproject.toml
 Part2/: part2.md
Part 1/: GaussianDownSampling.ipynb  GaussianDownSampling.py  GuessNumber.py  TextFile.py  The Bitter Lesson.txt
Part3/: mnist-numpy.py  mnist-pytorch.ipynb
Part3&4/: MLflow.md  best_mnist_model.pth  best_model_autoF2.pth  best_model_handwriteF2.pth  mnist-cnn.py  mnist-numpy.ipynb  mnist-numpy.py  mnist-pytorch-test.py  mnist-pytorch.ipynb  mnist-pytorch.py  report.md
