[project]
name = "learn-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lightning>=2.6.1",
    "matplotlib>=3.10.9",
    "mlflow>=3.12.0",
    "numpy>=2.2.6",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
